added templates and fixed css

--- a/views/index.html
+++ b/views/index.html
@@ -16,24 +16,11 @@
   <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a href="#" class="navbar-brand">Real-Time Chat</a>
-      </div>
-    </div>
-  </nav>
-  <div class="container-fluid" ng-controller="ChatCtrl">
-    <div class="row">
-      <div class="col-sm-3 col-md-2 sidebar">
-        <ul class="nav nav-sidebar"></ul>
-      </div>
-    </div>
-
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      The time is: {{time}}
-    </div>
-    
+  <nav class="navbar navbar-inverse navbar-fixed-top" ng-include="'templates/nav.html'"></nav>
+  
+  <div ng-controller="ChatCtrl">
+    <div class="row" ng-include="'templates/sidebar.html'"></div>
+    <div class="main" ng-include="'templates/main.html'"></div>
   </div>
 </body>
 </html>
