--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,7 @@
   top: 51px;
   bottom: 0;
   left: 0;
+  width: 220px;
   z-index: 1000;
   display: block;
   padding: 20px;
@@ -13,5 +14,33 @@
 }
 
 .main {
+  position: relative;
   top: 51px;
+  margin-left: 220px;
+}
+
+.input-conversation{
+  background: #f5f5f5;
+  padding: 5px 10px;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+}
+
+.input-conversation input {
+  width: 512px;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
