can list connected users

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,5 +1,5 @@
 <div class="conversation">
-  The time is: {{time}}
+  The time is: {{usersName}}
 </div>
 <div class="input-conversation">
   <input type="text">
