--- a/public/templates/sidebar.html
+++ b/public/templates/sidebar.html
@@ -1,3 +1,5 @@
 <div class="sidebar">
-  <ul class="nav nav-sidebar"></ul>
+  <ul class="nav nav-sidebar">
+    <li ng-repeat="user in users">{{user}}</li>
+  </ul>
 </div>
