--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,3 +44,12 @@
   -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+
+.conversation li {
+  list-style: none;
+  margin-bottom: 5px;
+}
+
+.conversation ul {
+  padding: 10px;
+}
