--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,7 +1,11 @@
 <div class="conversation">
-  The time is: {{usersName}}
+ <ul>
+  <li ng-repeat="message in messages">
+    <strong>{{message.name}}</strong>: {{message.message}}
+  </li>
+ </ul>
 </div>
 <div class="input-conversation">
-  <input type="text">
-  <button class="btn btn-primary">Send</button>
+  <input type="text" ng-model="message.text">
+  <button class="btn btn-primary" ng-click="sendMessage()">Send</button>
 </div>
