updated sidebar, added person icon

--- a/public/templates/sidebar.html
+++ b/public/templates/sidebar.html
@@ -1,5 +1,7 @@
 <div class="sidebar">
   <ul class="nav nav-sidebar">
-    <li ng-repeat="user in users"><i class="glyphicon glyphicon-user"></i> {{user}}</li>
+    <li ng-repeat="user in users">
+      <i class="glyphicon glyphicon-user"></i> {{user}}
+    </li>
   </ul>
 </div>
